task/admin update [1]

--- a/Frontend/src/components/Admin/UserList/UserList.module.scss
+++ b/Frontend/src/components/Admin/UserList/UserList.module.scss
@@ -10,11 +10,11 @@
 }
 
 .color {
-  color: #3D3F43;
+  color: #3d3f43;
 }
 
 .color2 {
-  color: #26579C;
+  color: #26579c;
 }
 
 table {
@@ -80,7 +80,7 @@ td {
 }
 
 .pagination-link.active {
-  background-color: #194D96;
+  background-color: #194d96;
   border-color: transparent;
   color: white;
   min-width: 32px;
