--- a/Frontend/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Frontend/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 // @import "@fontsource/montez";
 
 // @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
@@ -25,11 +26,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // box-sizing: inherit;
 }
-html {
-  //   font-size: 62.5%;
-}
+// html {
+//   //   font-size: 62.5%;
+// }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
