--- a/Frontend/src/components/Search/Search.module.scss
+++ b/Frontend/src/components/Search/Search.module.scss
@@ -1,28 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  background-color: rgb(243, 243, 242);
-}
-
-.search_image {
-  width: 100%;
-  border-radius: 99em;
-  height: 6em;
-  width: 6em;
-}
 .content0 {
-  position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  justify-content: center;
-  margin: auto;
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.content0 .content1 {
-  margin-top: 10px;
+.content1 {
+  width: 1100px;
   text-align: center;
 }
 
@@ -31,34 +16,20 @@
   font-size: 20px;
 }
 
-.loc {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
 .chung {
   background-color: rgb(219, 218, 216);
   margin-bottom: 10px;
   border: 1px solid rgb(126, 125, 125);
-  font-size: 15px;
-  width: 120px;
+  font-size: 20px;
+  width: 200px;
+  padding: 8px 10px;
+  font-weight: 600;
 }
 
-.dong9 button i {
-  background: rgb(219, 218, 216);
-}
-
-.dong9 button {
-  width: 120px;
-  padding: 1px 4px;
-  background-color: rgb(219, 218, 216);
-  font-size: 15px;
-  border: 1px solid rgb(126, 125, 125);
-  color: rgb(84, 85, 85);
-}
-
-.dong9 :hover {
-  background-color: rgb(248, 136, 108);
+.loc {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  display: flex;
 }
 
 .loc {
@@ -67,100 +38,56 @@
 }
 
 .rating {
+  margin: 6px 0;
   padding: 0px 3px;
   color: rgb(240, 197, 8);
   width: fit-content;
   background-color: rgb(196, 231, 233);
 }
 
-.rating {
-  background-color: rgb(196, 231, 233);
-}
-.rating i {
-  background-color: rgb(196, 231, 233);
-}
 .chitiet {
   display: flex;
   border: 1px solid rgb(126, 125, 125);
-  margin: 10% 50% 70% 80%;
+
   background: rgb(165, 114, 114);
-  padding: 0px 5px;
+  padding: 2px 6px;
+  cursor: pointer;
+  font-weight: 700;
 }
 .content2 {
-  margin: auto 160px auto 120px;
+  width: 1050px;
+  margin-top: 10px;
 }
 .giaovien {
-  padding: 5px;
-  grid-template-columns: 17% 60% 20%;
-  display: grid;
+  display: flex;
   border: 1px solid rgb(126, 125, 125);
+
+  padding: 10px 0;
   width: 100%;
-  height: fit-content;
   background: rgb(219, 218, 216);
-  margin: 20px;
 }
 
 .cot1 {
-  text-align: center;
-  margin: auto;
+  flex: 1;
   background: rgb(219, 218, 216);
-  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 16px;
+  margin-right: 12px;
 }
 
 .cot2 {
-  margin: auto;
+  flex: 7;
   background: rgb(219, 218, 216);
-  width: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 .cot3 {
+  flex: 2;
   background: rgb(219, 218, 216);
-  width: fit-content;
-}
-
-h4 {
-  background: rgb(219, 218, 216);
-}
-
-.mota {
-  background: rgb(219, 218, 216);
-}
-@media (min-width: 680px) and (max-width: 1120px) {
-  .content2 {
-    margin: auto 90px auto 50px;
-  }
-  .search_image {
-    height: 5em;
-    width: 5em;
-  }
-  .cot2 p {
-    font-size: 14px;
-  }
-  .chitiet {
-    font-size: 11px;
-    padding: 0px 4px;
-
-  }
-  .giaovien {
-    grid-template-columns: 20% 55% 20%;
-  }
-}
-@media screen and (max-width: 680px) {
-  .content2 {
-    margin: auto 50px auto 10px;
-  }
-  .search_image {
-    height: 4em;
-    width: 4em;
-  }
-  .cot2 p {
-    font-size: 13px;
-  }
-  .chitiet {
-    font-size: 9px;
-    padding: 0px 2px;
-  }
-  .giaovien {
-    grid-template-columns: 20% 52% 20%;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
