--- a/Frontend/src/components/Student/BookmarkTeacher/BookmarkTeacher.module.scss
+++ b/Frontend/src/components/Student/BookmarkTeacher/BookmarkTeacher.module.scss
@@ -1,38 +1,38 @@
 .title {
-    margin-top: 15px;
+  margin-top: 15px;
 }
-.box-bookmark{
-    margin-top: 30px;
-    display: flex;
-    background-color: rgb(184, 182, 180);
-    height: 160px;
+.box-bookmark {
+  margin-top: 30px;
+  display: flex;
+  background-color: rgb(184, 182, 180);
+  height: 160px;
 }
-.left{
-    width: 120px
+.left {
+  width: 120px;
 }
-.center{
-    margin-left: 10px;
-    width: 400px;
+.center {
+  margin-left: 10px;
+  width: 400px;
 }
-img{
-    width: 100%;
-    border-radius: 50%;
-    margin-top: 20px;
-    margin-left: 5px;
-}
-.pd-rating{
-    margin-top: 5px;
+// img{
+//     width: 100%;
+//     border-radius: 50%;
+//     margin-top: 20px;
+//     margin-left: 5px;
+// }
+.pd-rating {
+  margin-top: 5px;
 }
 .pd-rating i {
-    color: yellow;
+  color: yellow;
 }
-.right{
-    margin-top: 5px;
+.right {
+  margin-top: 5px;
 }
-button{
-    background-color: rgb(189, 126, 135);
-    width: 100%;
-    margin-top: 40px;
-    font-weight: bold;
-    padding-right: 10px;
-}
+// button{
+//     background-color: rgb(189, 126, 135);
+//     width: 100%;
+//     margin-top: 40px;
+//     font-weight: bold;
+//     padding-right: 10px;
+// }
