--- a/Frontend/src/components/common/Header/Header.module.scss
+++ b/Frontend/src/components/common/Header/Header.module.scss
@@ -1,5 +1,26 @@
 .wrapper {
-  height: 100px;
+  height: 4rem;
   width: 100%;
-  background-color:bisque;
+  background-color: rgb(239, 236, 232);
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  padding: 0 30px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.option {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
