--- a/Frontend/src/components/Search/Search.module.scss
+++ b/Frontend/src/components/Search/Search.module.scss
@@ -16,6 +16,12 @@
   font-size: 20px;
 }
 
+.tittle {
+  margin-top: 30px;
+  font-size: 50px;
+  font-weight: 600;
+}
+
 .chung {
   background-color: rgb(219, 218, 216);
   margin-bottom: 10px;
@@ -27,7 +33,7 @@
 }
 
 .loc {
-  margin-top: 20px;
+  margin-top: 54px;
   margin-bottom: 10px;
   display: flex;
 }
