--- a/Frontend/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/Frontend/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -3,5 +3,6 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: #f6f9fc;
+  background-color: var(--background);
+  // height: 100vh;
 }
