--- a/Frontend/src/components/Teacher/Profile/Profile.module.scss
+++ b/Frontend/src/components/Teacher/Profile/Profile.module.scss
@@ -21,12 +21,15 @@
   width: 450px;
   // height: 500px;
   // padding: 25px;
+ 
+  border-radius: 8px;
 }
 .left {
   background-color: white;
   width: 650px;
   // height: 550px;
   padding: 25px 25px 25px 5px;
+  border-radius: 8px;
 }
 
 .header-profile {
