--- a/Frontend/src/components/Search/Search.module.scss
+++ b/Frontend/src/components/Search/Search.module.scss
@@ -7,8 +7,9 @@
 }
 
 .content1 {
-  width: 1100px;
+  width: 1050px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .content0 .content1 h2 {
@@ -32,10 +33,14 @@
   font-weight: 600;
 }
 
+// .filter {
+//   width: 300px;
+// }
 .loc {
   margin-top: 54px;
   margin-bottom: 10px;
   display: flex;
+  justify-content: space-around;
 }
 
 .loc {
@@ -61,7 +66,7 @@
   font-weight: 700;
 }
 .content2 {
-  width: 1050px;
+  width: 1000px;
   margin-top: 10px;
 }
 .giaovien {
@@ -97,4 +102,3 @@
   justify-content: center;
   align-items: center;
 }
-
