--- a/Frontend/src/components/common/Header/Header.module.scss
+++ b/Frontend/src/components/common/Header/Header.module.scss
@@ -7,8 +7,7 @@
 }
 
 .container {
-  padding: 0 30px;
-  width: 100%;
+  width: 1280px;
   display: flex;
   justify-content: space-between;
   align-items: center;
