--- a/Frontend/src/components/common/Header/Header.module.scss
+++ b/Frontend/src/components/common/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Merienda+One&family=Montez&family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap");
+
 .wrapper {
   height: 4rem;
   width: 100%;
@@ -14,7 +16,8 @@
 }
 
 .logo {
-  font-size: 30px;
+  font-family: "Merienda One", cursive;
+  font-size: 36px;
   font-weight: 600;
 }
 
