--- a/Frontend/src/components/Search/Search.module.scss
+++ b/Frontend/src/components/Search/Search.module.scss
@@ -26,11 +26,19 @@
 .chung {
   background-color: rgb(219, 218, 216);
   margin-bottom: 10px;
-  border: 1px solid rgb(126, 125, 125);
+
   font-size: 20px;
   width: 200px;
   padding: 8px 10px;
   font-weight: 600;
+  border-radius: 4px;
+}
+
+.check {
+  border: 2px solid black;
+}
+.notcheck {
+  border: 1px solid rgb(126, 125, 125);
 }
 
 // .filter {
