--- a/Frontend/src/components/Teacher/Profile/Profile.module.scss
+++ b/Frontend/src/components/Teacher/Profile/Profile.module.scss
@@ -21,7 +21,7 @@
   width: 450px;
   // height: 500px;
   // padding: 25px;
- 
+
   border-radius: 8px;
 }
 .left {
@@ -77,6 +77,7 @@
   font-weight: bold;
   padding: 4px 60px;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .profile-title {
@@ -93,6 +94,7 @@
 }
 .left-btn {
   font-weight: bold;
-  padding: 0 55px;
+  padding: 6px 50px;
   margin: 55px 135px;
+  cursor: pointer;
 }
