--- a/Frontend/src/pages/Login/login.module.scss
+++ b/Frontend/src/pages/Login/login.module.scss
@@ -1,67 +1,56 @@
-.header {
-  color: crimson;
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 
-.app {
-  font-family: sans-serif;
+.form{
+  // height: 400px;
+  background-color: #d9d9d9;
+  // width: 400px;
+  border-radius: 8px;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 20px;
-  height: 100vh;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background-color: #f8f9fd;
+  align-items: center;
+  padding: 90px 60px;
 }
 
-input[type="text"],
-input[type="password"] {
-  height: 25px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+.input-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
 
-input[type="submit"] {
-  margin-top: 10px;
-  cursor: pointer;
-  font-size: 15px;
-  background: #01d28e;
-  border: 1px solid #01d28e;
-  color: #fff;
+.input{
+  border: none;
+  border-radius: 6px;
   padding: 10px 20px;
 }
 
-input[type="submit"]:hover {
-  background: #6cf0c2;
+.input-form{
+  background: linear-gradient(
+    90deg,
+    rgb(41, 40, 40),
+    rgb(82, 82, 82),
+    rgb(170, 169, 170)
+  );
+  padding: 10px 20px;
+
+  width: 100%;
+  margin: auto;
+  margin-top: 30px;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
+    0 16px 16px #0000001f;
+  border-radius: 6px;
 }
 
-.button-container {
-  display: flex;
-  justify-content: center;
-}
-
-.login-form {
-  background-color: white;
-  padding: 2rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.list-container {
-  display: flex;
-}
-
-.error {
-  color: red;
-  font-size: 12px;
-}
-
-.title {
-  font-size: 25px;
-  margin-bottom: 20px;
-}
-
-.input-container {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin: 10px;
-}
