--- a/Frontend/src/components/Teacher/Info/Info.module.scss
+++ b/Frontend/src/components/Teacher/Info/Info.module.scss
@@ -1,42 +1,102 @@
-.giaovien {
+
+
+.wrapper {
   display: flex;
-  border: 1px solid rgb(126, 125, 125);
-  padding: 10px 0;
-  width: 100%;
-  background: rgb(219, 218, 216);
-  margin-bottom: 30px;
-  border-radius: 4px;
+  margin-top: 20px;
+  justify-content: space-between;
+  width: 1120px;
+}
+.pd-r15 {
+  padding-right: 35px;
+}
+.pd-r35 {
+  padding-right: 55px;
+}
+.pd-r58 {
+  padding-right: 58px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+.right {
+  background-color: white;
+  width: 450px;
+  // height: 500px;
+  // padding: 25px;
+
+  border-radius: 8px;
+}
+.left {
+  background-color: white;
+  width: 650px;
+  // height: 550px;
+  padding: 25px 25px 25px 5px;
+  border-radius: 8px;
 }
 
-.cot1 {
-  flex: 1;
-  background: rgb(219, 218, 216);
+.header-profile {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 4px 16px;
-  margin-right: 12px;
+  justify-content: space-between;
+}
+.img-profile {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  margin-left: 150px;
+  margin-top: 10px;
+}
+.pd-rating {
+  padding: 3px 15px;
+  margin: 6px 170px;
+  background-color: rgb(175, 233, 244);
+}
+.pd-rating i {
+  color: yellow;
+}
+.p-profile {
+  line-height: 2;
+  margin: 5px 0 5px 20px;
+}
+.profile-info {
+  display: flex;
+  margin: 15px 20px 0;
+}
+.profile-info-mt10 {
+  display: flex;
+  margin: 40px 20px 0;
 }
 
-.cot2 {
-  flex: 7;
-  background: rgb(219, 218, 216);
+.p-info {
+  margin-right: 20px;
+}
+.bottom-btn {
+  margin-top: 25px;
+  margin-left: 15px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+.btn {
+  font-weight: bold;
+  padding: 4px 60px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
-.cot3 {
-  flex: 2;
-  background: rgb(219, 218, 216);
+.profile-title {
+  padding-right: 70px;
+  margin-top: 20px;
+  margin-left: 60px;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
-
-.rating {
-  margin: 6px 0;
-  padding: 0px 3px;
-  color: rgb(240, 197, 8);
-  width: fit-content;
-  background-color: rgb(196, 231, 233);
+.profile-title-phone {
+  padding-right: 70px;
+  margin-top: 20px;
+  margin-left: 35px;
+  display: flex;
+}
+.left-btn {
+  font-weight: bold;
+  padding: 6px 50px;
+  margin: 55px 135px;
+  cursor: pointer;
 }
