--- a/Frontend/src/components/Teacher/Info/Info.module.scss
+++ b/Frontend/src/components/Teacher/Info/Info.module.scss
@@ -1,10 +1,8 @@
-
-
 .wrapper {
   display: flex;
-  margin-top: 20px;
   justify-content: space-between;
-  width: 1120px;
+  width: 1160px;
+  padding: 20px;
 }
 .pd-r15 {
   padding-right: 35px;
@@ -21,10 +19,10 @@
 .right {
   background-color: white;
   width: 450px;
-  // height: 500px;
-  // padding: 25px;
-
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .left {
   background-color: white;
@@ -63,7 +61,7 @@
 }
 .profile-info-mt10 {
   display: flex;
-  margin: 40px 20px 0;
+  margin: 20px 20px 0;
 }
 
 .p-info {
@@ -77,26 +75,28 @@
 }
 .btn {
   font-weight: bold;
-  padding: 4px 60px;
+  padding: 4px 50px;
   font-size: 18px;
   cursor: pointer;
+  border-radius: 4px;
 }
 
 .profile-title {
-  padding-right: 70px;
   margin-top: 20px;
   margin-left: 60px;
   display: flex;
+  font-size: 10px;
 }
 .profile-title-phone {
-  padding-right: 70px;
+  padding-right: 50px;
   margin-top: 20px;
   margin-left: 35px;
   display: flex;
 }
 .left-btn {
   font-weight: bold;
-  padding: 6px 50px;
+  padding: 6px 36px;
   margin: 55px 135px;
   cursor: pointer;
+  border-radius: 4px;
 }
