--- a/Frontend/src/components/Teacher/Info/Info.module.scss
+++ b/Frontend/src/components/Teacher/Info/Info.module.scss
@@ -41,7 +41,7 @@
   width: 150px;
   height: 150px;
   margin-left: 150px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .pd-rating {
   padding: 3px 15px;
@@ -79,6 +79,10 @@
   font-size: 18px;
   cursor: pointer;
   border-radius: 4px;
+  border: none;
+  &:hover {
+    background-color: #dbdad8;
+  }
 }
 
 .profile-title {
@@ -99,4 +103,8 @@
   margin: 55px 135px;
   cursor: pointer;
   border-radius: 4px;
+  border: none;
+  &:hover {
+    background-color: #dbdad8;
+  }
 }
