--- a/Frontend/src/components/Teacher/Profile/Profile.module.scss
+++ b/Frontend/src/components/Teacher/Profile/Profile.module.scss
@@ -41,7 +41,6 @@
   width: 150px;
   height: 150px;
   margin-left: 150px;
-  margin-top: 10px;
 }
 .pd-rating {
   padding: 3px 15px;
@@ -79,6 +78,10 @@
   font-size: 18px;
   cursor: pointer;
   border-radius: 4px;
+  border: none;
+  &:hover {
+    background-color: #dbdad8;
+  }
 }
 
 .profile-title {
