--- a/Frontend/src/components/Teacher/Info/Info.module.scss
+++ b/Frontend/src/components/Teacher/Info/Info.module.scss
@@ -108,3 +108,11 @@
     background-color: #dbdad8;
   }
 }
+.left-btn-bookmark {
+  font-weight: bold;
+  padding: 6px 36px;
+  margin: 55px 135px;
+  border-radius: 4px;
+  border: none;
+  background-color: #dbdad8;
+}
